--- a/pages/Gearhartwalk/Gearhartwalk.html
+++ b/pages/Gearhartwalk/Gearhartwalk.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Unity Web Player | GearhartWalk</title>
+		<title>Gearhart Walk</title>
 		<script type='text/javascript' src='https://ssl-webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/jquery.min.js'></script>
 		<script type="text/javascript">
 		<!--
@@ -64,15 +65,15 @@
 		<!--
 		body {
 			font-family: Helvetica, Verdana, Arial, sans-serif;
-			background-color: white;
-			color: black;
+			background-color: black;
+			color: white;
 			text-align: center;
 		}
 		a:link, a:visited {
-			color: #000;
+			color: grey;
 		}
 		a:active, a:hover {
-			color: #666;
+			color: white;
 		}
 		p.header {
 			font-size: small;
@@ -116,7 +117,7 @@
 		</style>
 	</head>
 	<body>
-		<p class="header"><span>Unity Web Player | </span>GearhartWalk</p>
+	<p> </p>
 		<div class="content">
 			<div id="unityPlayer">
 				<div class="missing">
@@ -131,6 +132,9 @@
 				</div>
 			</div>
 		</div>
+		<p class="footer"> Hold left click or use arrow keys to move. Right click to enter fullscreen.</p>
+		<p class="footer"> <a href="http://www.saic.edu/~tnewla/"> Thomas Newlands</a> 2014 </p>
+		<p> </p>
 		<p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
 	</body>
 </html>
