--- a/pages/jazzcupgenerator/indexbackup2.html
+++ b/pages/jazzcupgenerator/indexbackup2.html
@@ -21,7 +21,6 @@
 	<body>
 		
 		<script src="js/Three.js"></script>
-		<script src="js/THREEx.WindowResize.js"></script>
 		
 		<script>
 		
@@ -156,6 +155,7 @@
 				ctx.stroke();
 				ctx.closePath();
 				// end cyan line ---------------------------------------------
+				console.log("hello!");
 			}
 			 
 			canvassetup();
@@ -215,7 +215,7 @@
 				texture1.needsUpdate = true;
 				papercup(texture1);
 				
-				THREEx.WindowResize(renderer, camera);
+
 			}
 
 			function draw() {
