--- a/index.html
+++ b/index.html
@@ -1,92 +1,34 @@
-
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
-
-<head> 
-	<title>
-		Thomas' Page
-		
-	</title>
-	
-	<meta name="My page!" content="Mostly digital work I've been doing at SAIC">
-	
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
-	
-	<style>
-		
-		.bodytext{
-			font-family: monospace;
-			position: absolute;
-			top: 10%;
-			right: 25%;
-			left: 25%;
-		}
-		
-		.background{
-			background-color:rgba(255, 255, 255, 0.95);
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			top: 0;
-			left: 0;
-			z-index: -1;
-		} 
-		
-		body {
-			background-image:url(images/greengifs/green.gif);
-			background-size: 100px;
-			height: 100%;
-			width: 100%;
-			min-height: 100%; 
-			min-width: 100%; 
-		}
-
-		h1 {
-			background-color:rgba(255, 255, 255, 0.95);
-		} 
-		
-		a:hover {
-			color: orange;
-		}
-	</style>
+<head>
+<title>Thomas Newlands' Portable Museum</title>
 </head>
+<!--
+======================================================================================================
+This template is available for free download from the Quackit website.
 
-<body>
+If you have found it to be useful, please consider linking from your website to http://www.quackit.com
 
-	<div class="background"> </div>	
+Thanks!
+======================================================================================================
 
-	<div class="bodytext">
-		<center><p><font size="12">Welcome!</font><p> 
-		
-		<br> </br>
-		
-		<p><center> WebGL <center><p>
-		<p><center> <a href="pages/jazzcupgenerator/">Solo Jazz Cup Generator</a> <center><p>
-		
-		<p><center> 2d Gifs <center><p>
-		<p><center> <a href="pages/pigeon.html">Pigeons</a> <center><p>
-		
-		<p><center> 3d Gifs <center><p>
-		<p><center> <a href="pages/gifs.html">Tessellate</a> <center><p>
-		<p><center> <a href="images/noise.gif">Noise</a> <center><p>
-		<p><center> <a href="images/kettle.gif">Kettle</a> <center><p>
-		<p><center> <a href="images/portcago.gif">Portcago</a> <center><p>
-		
-		<p><center> Web-Poetry <center><p>
-		<p><center> <a href="pages/epoem/aboutabout.html">about</a> <center><p>
-	
-		<p><center>	Unity <center><p>
-		<p><center> <a href="pages/Gearhartwalk/Gearhartwalk.html">Gearhart Walk</a> <center><p>
-		<p><center> <a href="pages/doorisopen/doorisopen.html">Door is Open</a> <center><p>
-		
-		<p><center>	Writing <center><p>
-		<p><center>	<a href="pages/asmrproximityintimacy.htm">/r/asmr : Digital Intimacy and Proximity</a> <center><p>
-		
-		<br> </br>
-		
-		<p> Cheers, </p>
-		<p> Thomas Newlands <p>
-	</div>
+Note the following:
+1. Each frame has it's own 'frame' tag.
+2. Each frame has a name (eg, name="menu"). This is used for when you need to load one frame from another. For example, your left frame might have links that, when clicked on, loads a new page in the right frame. This is acheived by using 'target="content"' within your links/anchor tags.
+3. Each 'frame' tag has a 'src' attribute. This is where you specify the name of the file to be loaded into that frame when the page first loads.
+4. You can change the size of the frames by changing the value of the 'cols' and/or 'rows' attribute. A value of "200" sets the frame at 200 pixels. An asterisk (*) specifies that the frame should use up whatever space is left over from the other frames. You can also use percentage values if desired (i.e. 20%,80%)
+5. To specify a border, set 'frameborder' and 'border' to "1". I included both attributes for maximum browser compatibility.
+6. The 'framespacing' attribute doesn't work in all browsers, but you can set any numeric value you like here.
+7. To learn more about HTML frames, check out: http://www.quackit.com/html/tutorial/html_frames.cfm
+-->
 
-</body>
+<frameset cols="200,*" frameborder="0" border="0" framespacing="0">
+	<frame name="menu" src="menu_1.html" marginheight="0" marginwidth="0" scrolling="auto" noresize>
+	<frame name="content" src="content.html" marginheight="0" marginwidth="0" scrolling="auto" noresize>
+
+<noframes>
+<p>This section (everything between the 'noframes' tags) will only be displayed if the users' browser doesn't support frames. You can provide a link to a non-frames version of the website here. Feel free to use HTML tags within this section.</p>
+</noframes>
+
+</frameset>
 </html>
