--- a/menu_1.html
+++ b/menu_1.html
@@ -34,7 +34,7 @@
 		<p><b>Misc</b><BR>
 
 
-		<a href="pages/info.html" target="content">info</a><BR>
+		<a href="indexpages/info/index.html" target="content">info</a><BR>
 		<a href="http://thnewlands.tumblr.com/" target="_blank">tumblr</a><br />
 		<a href="http://twitter.com/comomomo" target="_blank">twitter</a><br />
 		
