--- a/menu_1.html
+++ b/menu_1.html
@@ -17,7 +17,7 @@
 	<div class="sidebar">
 		<p>---------</p>
 
-		<b><font size="+1">Thomas Newlands'</b></font><BR>
+		<b><font size="+1">Thomas Newlands's</b></font><BR>
 		<b><font size="+1">portable museum</b></font><BR>
 		<p><b>2015</b><br>
 		<a href="indexpages/sleepcards/index.html" target="content">* Somniloquist Cards</a><BR>
