--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
-<title>Thomas Newlands' Portable Museum</title>
+<title>Thomas Newlands's Portable Museum</title>
 </head>
 <!--
 ======================================================================================================
