--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
+<meta name=viewport content="width=device-width, initial-scale=1">
 <title>Thomas Newlands's Portable Museum</title>
 </head>
 <!--
