--- a/menu_1.html
+++ b/menu_1.html
@@ -2,7 +2,6 @@
 <head>
 	<title>HTML Frames Example - Menu 1</title>
 	<link rel="icon" type="image/png" href="images/logo.ico" sizes="16x16">
-	
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300,500,900&subset=latin,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="mystyle.css">
 	<style>
@@ -17,8 +16,8 @@
 	<div class="sidebar">
 		<p>---------</p>
 
-		<b><font size="+1">Thomas Newlands's</b></font><BR>
-		<b><font size="+1">portable museum</b></font><BR>
+		<a href="content.html" target="content"> <b><font size="+1">Thomas Newlands's</b></font><BR>
+		<b><font size="+1">portable museum</b></font><BR></a>
 		<p><b>2015</b><br>
 		<a href="indexpages/sleepcards/index.html" target="content">* Somniloquist Cards</a><BR>
 		<a href="indexpages/jazzgenerator/index.html" target="content">* Jazz Solocup Generators</a><BR>
