--- a/content.html
+++ b/content.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>kyttenjanae</title>
+<meta name=viewport content="width=device-width, initial-scale=1">
+<title>Tumblr Embed</title>
 	<link rel="stylesheet" href="mystyle.css">
 </style>
 </head>
