more mobile font stuff

--- a/menu_1.html
+++ b/menu_1.html
@@ -10,19 +10,29 @@
 		top:15%;
 		margin:5%;
 	}
+	
+	.title {
+		font-size: 11pt;
+	}
 	@media (max-width: 150px) {
 	  body {
 		font-size: 8pt;
+		}
+		.title {
+		font-size: 10pt;
+		}
 	  }	
+	  	  
+
 	</style>
 </head>
 	<body>
 	<div class="sidebar">
 		<p>---------</p>
 
-		<a href="content.html" target="content"> <b><font size="+1">Thomas Newlands's</b></font><BR>
-		<b><font size="+1">portable museum</b></font><BR></a>
-		<p><b>2015</b><br>
+		<div class = title><a href="content.html" target="content"> <b>Thomas Newlands's</b></font><BR>
+		<b>portable museum</b></font><BR></a>
+		<p><b>2015</b><br></div>
 		<a href="indexpages/sleepcards/index.html" target="content">* Somniloquist Cards</a><BR>
 		<a href="indexpages/jazzgenerator/index.html" target="content">* Jazz Solocup Generators</a><BR>
 		<a href="indexpages/inflate/index.html" target="content">* Inflate.exe</a><BR>
