--- a/menu_1.html
+++ b/menu_1.html
@@ -31,8 +31,8 @@
 		<p>---------</p>
 
 		<div class = title><a href="content.html" target="content"> <b>Thomas Newlands's</b></font><BR>
-		<b>portable museum</b></font><BR></a>
-		<p><b>2015</b><br></div>
+		<b>portable museum</b></font><BR></a></div>
+		<p><b>2015</b><br>
 		<a href="indexpages/sleepcards/index.html" target="content">* Somniloquist Cards</a><BR>
 		<a href="indexpages/jazzgenerator/index.html" target="content">* Jazz Solocup Generators</a><BR>
 		<a href="indexpages/inflate/index.html" target="content">* Inflate.exe</a><BR>
