Google Analytics and tweaked info page
herewego

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Note the following:
 	<frame name="content" src="content.html" marginheight="0" marginwidth="0" scrolling="auto" noresize>
 
 <noframes>
-<p>Portfolio of Thomas' work.</p>
+<p>Portfolio of Thomas' work right here on your computer screen.</p>
 
 <p>This section (everything between the 'noframes' tags) will only be displayed if the users' browser doesn't support frames. You can provide a link to a non-frames version of the website here. Feel free to use HTML tags within this section.</p>
 </noframes>
