--- a/indexpages/info/index.html
+++ b/indexpages/info/index.html
@@ -5,11 +5,8 @@
 </head>
 <body>
 
-	
-	<p> Info section under construction </p>
-
-
-	
+	<p> Thanks for stopping by my page! </p>
+	<p> Reach me at thnewlands (at) gmail (dot) com </p>
 	
 </body>
 </html>
