Added Hug Point documentation and cleaned up site

--- a/indexpages/motherboard/index.html
+++ b/indexpages/motherboard/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 <head>
 <title>Motherboard</title>
@@ -8,9 +10,9 @@
 	
 	<p> This collaboration with Craig Stam uses the language of ASMR triggering videos to create a breathing space online. </p>
 	
-	<p> The web version is available over here: <a href="http://thnewlands.github.io/pages/~s.html">http://thnewlands.github.io/pages/~s.html</a> I recommend viewing it in fullscreen.</p>
+	<p> The web version is available over here: <a href="http://thnewlands.github.io/pages/~s.html" target="newtab">http://thnewlands.github.io/pages/~s.html</a> I recommend viewing it in fullscreen.</p>
 
-	<p>You can find Craig's work over here: <a href="http://cargocollective.com/cstama/">http://cargocollective.com/cstama/</a></p>
+	<p>You can find Craig's work over here: <a href="http://cargocollective.com/cstama/" target="newtab">http://cargocollective.com/cstama/</a></p>
 
 	<br> <img src="motherboard1.jpg" </br>
 	
