--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name=viewport content="width=device-width, initial-scale=1">
+<meta name="description" content="Portfolio of Thomas' work right here on your computer screen.">
 <title>Thomas Newlands's Portable Museum</title>
 </style>
 </head>
