--- a/indexpages/balanceboards/index.html
+++ b/indexpages/balanceboards/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 <head>
 <title>Balance Boards</title>
@@ -8,7 +10,7 @@
 	
 	<p> A collaboration with Peter Smyth. Two board games exploring balance. </p>
 			<p>You can find his work here: 
- <a href="http://petersmyths.tumblr.com/">http://petersmyths.tumblr.com/</a></p>
+ <a href="http://petersmyths.tumblr.com/" target="newtab">http://petersmyths.tumblr.com/</a></p>
 		
 	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/35QqXCt7w1I?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>	
 	
