--- a/indexpages/jazzgenerator/index.html
+++ b/indexpages/jazzgenerator/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 <head>
 <title>Jazz Solo Cup Generator</title>
@@ -12,9 +14,9 @@
 	
 	<br> <img src="jazzsolo2.png" </br>
 	
-	<p> Rain version: <a href="http://thnewlands.github.io/pages/jazzcupgenerator-rain/">http://thnewlands.github.io/pages/jazzcupgenerator-rain/</a></p>
+	<p> Rain version: <a href="http://thnewlands.github.io/pages/jazzcupgenerator-rain/" target="newtab">http://thnewlands.github.io/pages/jazzcupgenerator-rain/</a></p>
 	
-	<p> Single cup version: <a href="http://thnewlands.github.io/pages/jazzsolocupgenerator/">http://thnewlands.github.io/pages/jazzsolocupgenerator/</a></p>
+	<p> Single cup version: <a href="http://thnewlands.github.io/pages/jazzsolocupgenerator/" target="newtab">http://thnewlands.github.io/pages/jazzsolocupgenerator/</a></p>
 	
 	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/7k4SkHrYGpQ?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>	
 </body>
