--- a/indexpages/inflate/index.html
+++ b/indexpages/inflate/index.html
@@ -4,8 +4,17 @@
 <head>
 <title>Inflate.exe</title>
 <link rel="stylesheet" href="../../mystyle.css">
+<script src="../../jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
+
+	<div id="sidebar">
+	<script>
+		$( "#sidebar" ).load( "../../menu.html" );
+	</script>
+	</div>
+	
+	<div id="content"> 
 	<p> <b>  Inflate.exe - 2015 </b> </p>
 	
 	<p> Game where you pump up videogame characters. The game is built in Unity and played with a physical bike pump.</p>
@@ -15,5 +24,6 @@
 	<br> <img src="inflate2.png" </br>
 	
 	<p> <div class="video-container"> <iframe src="https://www.youtube.com/embed/ZjuEHN2MpYk?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>
+	</div>
 </body>
 </html>
