--- a/indexpages/jazzgenerator/index.html
+++ b/indexpages/jazzgenerator/index.html
@@ -4,8 +4,16 @@
 <head>
 <title>Jazz Solo Cup Generator</title>
 <link rel="stylesheet" href="../../mystyle.css">
+<script src="../../jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
+	<div id="sidebar">
+	<script>
+		$( "#sidebar" ).load( "../../menu.html" );
+	</script>
+	</div>
+	
+	<div id="content">
 	<p> <b>  Jazz Solo Cup Generator - 2014-2015 </b> </p>
 	
 	<p> Online Jazz solo cup generator built using HTML5 canvas and three.js. Made possible with plenty of help from Nick Briz and Peter Smyth.</p>
@@ -19,5 +27,6 @@
 	<p> Single cup version: <a href="http://thnewlands.github.io/pages/jazzsolocupgenerator/" target="newtab">http://thnewlands.github.io/pages/jazzsolocupgenerator/</a></p>
 	
 	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/7k4SkHrYGpQ?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>	
+	</div>
 </body>
 </html>
