--- a/indexpages/sleepcards/index.html
+++ b/indexpages/sleepcards/index.html
@@ -4,8 +4,16 @@
 <head>
 <title>Somniloquist Cards</title>
 <link rel="stylesheet" href="../../mystyle.css">
+<script src="../../jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
+	<div id="sidebar">
+	<script>
+		$( "#sidebar" ).load( "../../menu.html" );
+	</script>
+	</div>
+	
+	<div id="content"> 
 	<p> <b> Somniloquist Cards - 2015 </b> </p>
 	
 	<p> I used Amazon's Mechanical Turk to crowdsource transcriptions of my sleeptalking recorded in Sleep as Android. These cards are the result of a dialog between my sleeping self and an anonymous audience. </p>
@@ -13,5 +21,6 @@
 	<br> <img src="sleepcard1.jpg" </br>
 	
 	<br> <img src="sleepcard2.jpg" </br>
+	</div>
 </body>
 </html>
