--- a/indexpages/balanceboards/index.html
+++ b/indexpages/balanceboards/index.html
@@ -4,8 +4,16 @@
 <head>
 <title>Balance Boards</title>
 <link rel="stylesheet" href="../../mystyle.css">
+<script src="../../jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
+	<div id="sidebar">
+	<script>
+		$( "#sidebar" ).load( "../../menu.html" );
+	</script>
+	</div>
+	
+	<div id="content">
 	<p> <b> Balance Boards - 2015 </b> </p>
 	
 	<p> A collaboration with Peter Smyth. Two board games exploring balance. </p>
@@ -14,7 +22,8 @@
 		
 	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/35QqXCt7w1I?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>	
 	
-	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/lUxjPWBhDs4?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>	
+	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/lUxjPWBhDs4?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>
+	</div>	
 
 </body>
 </html>
