--- a/indexpages/info/index.html
+++ b/indexpages/info/index.html
@@ -4,11 +4,20 @@
 <head>
 <title>Info</title>
 <link rel="stylesheet" href="../../mystyle.css">
+<script src="../../jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
 
+	<div id="sidebar">
+	<script>
+		$( "#sidebar" ).load( "../../menu.html" );
+	</script>
+	</div>
+	
+	<div id="content">
 	<p> Thanks for stopping by my page! </p>
 	<p> Reach me at thnewlands (at) gmail (dot) com </p>
+	</div>
 	
 </body>
 </html>
