--- a/indexpages/motherboard/index.html
+++ b/indexpages/motherboard/index.html
@@ -4,8 +4,16 @@
 <head>
 <title>Motherboard</title>
 <link rel="stylesheet" href="../../mystyle.css">
+<script src="../../jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
+	<div id="sidebar">
+	<script>
+		$( "#sidebar" ).load( "../../menu.html" );
+	</script>
+	</div>
+	
+	<div id="content">
 	<p> <b>  Motherboard - 2015 </b> </p>
 	
 	<p> This collaboration with Craig Stam uses the language of ASMR triggering videos to create a breathing space online. </p>
@@ -17,6 +25,6 @@
 	<br> <img src="motherboard1.jpg" </br>
 	
 	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/q87ShAG-B2E?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>	
-	
+	</div>
 </body>
 </html>
