--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-	<title>Tumblr Embed</title>
+	<title>Thomas Newlands's Portable Museum</title>
 	<link rel="stylesheet" href="mystyle.css">
 	<script src="jquery-2.1.4.min.js" type="text/javascript"></script>
 	<style>
