--- a/indexpages/balanceboards/index.html
+++ b/indexpages/balanceboards/index.html
@@ -3,13 +3,13 @@
 <html>
 <head>
 <title>Balance Boards</title>
-<link rel="stylesheet" href="../../mystyle.css">
-<script src="../../jquery-2.1.4.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/mystyle.css">
+<script src="/jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
 	<div id="sidebar">
 	<script>
-		$( "#sidebar" ).load( "../../menu.html" );
+		$( "#sidebar" ).load( "/menu.html" );
 	</script>
 	</div>
 	
