--- a/indexpages/sleepcards/index.html
+++ b/indexpages/sleepcards/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 <title>Somniloquist Cards</title>
-<link rel="stylesheet" href="../../mystyle.css">
-<script src="../../jquery-2.1.4.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/mystyle.css">
+<script src="/jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
 	<div id="sidebar">
