--- a/indexpages/balanceboards/index.html
+++ b/indexpages/balanceboards/index.html
@@ -7,6 +7,7 @@
 <script src="/jquery-2.1.4.min.js" type="text/javascript"></script>
 </head>
 <body>
+
 	<div id="sidebar">
 	<script>
 		$( "#sidebar" ).load( "/menu.html" );
@@ -16,13 +17,12 @@
 	<div id="content">
 	<p> <b> Balance Boards - 2015 </b> </p>
 	
-	<p> A collaboration with Peter Smyth. Two board games exploring balance. </p>
-			<p>You can find his work here: 
- <a href="http://petersmyths.tumblr.com/" target="newtab">http://petersmyths.tumblr.com/</a></p>
+	<p> A collaboration with Peter Smyth. Two board games exploring balance. </p> 
+	<p>You can find his work here: <a href="http://petersmyths.tumblr.com/" target="newtab">http://petersmyths.tumblr.com/</a></p>
 		
-	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/35QqXCt7w1I?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>	
+	<br><div class="video-container"> <iframe src="https://www.youtube.com/embed/35QqXCt7w1I?rel=0" frameborder="0" allowfullscreen></iframe> </div></br>
 	
-	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/lUxjPWBhDs4?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>
+	<br><div class="video-container"> <iframe src="https://www.youtube.com/embed/lUxjPWBhDs4?rel=0" frameborder="0" allowfullscreen></iframe> </div> </br>
 	</div>	
 
 </body>
