--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
 	<div class="sidebar">
 		<p>---------</p>
 
-		<div class = title><a href="index.html"> <b>Thomas Newlands's</b></font><BR>
+		<div class = title><a href="/index.html"> <b>Thomas Newlands's</b></font><BR>
 		<b>portable museum</b></font><BR></a></div>
 		<p><b>2015</b><br>
 		<a href="/indexpages/hugpoint/index.html">* Hug Point, Oregon</a><BR>
