--- a/menu.html
+++ b/menu.html
@@ -48,13 +48,13 @@
 		<div class = title><a href="/index.html"> <b>Thomas Newlands's</b></font><BR>
 		<b>portable museum</b></font><BR></a></div>
 		<p><b>2015</b><br>
-		<a href="/indexpages/hugpoint/index.html">* Hug Point, Oregon</a><BR>
-		<a href="/indexpages/sleepcards/index.html">* Somniloquist Cards</a><BR>
-		<a href="/indexpages/jazzgenerator/index.html">* Jazz Solocup Generators</a><BR>
-		<a href="/indexpages/inflate/index.html">* Inflate.exe</a><BR>
-		<a href="/indexpages/motherboard/index.html">* Motherboard</a><BR>
-		<a href="/indexpages/1003/index.html">* 1003 Embedded</a><BR>
-		<a href="/indexpages/balanceboards/index.html">* Balance Boards</a><BR>
+		<a href="/indexpages/hugpoint/">* Hug Point, Oregon</a><BR>
+		<a href="/indexpages/sleepcards/">* Somniloquist Cards</a><BR>
+		<a href="/indexpages/jazzgenerator/">* Jazz Solocup Generators</a><BR>
+		<a href="/indexpages/inflate/">* Inflate.exe</a><BR>
+		<a href="/indexpages/motherboard/">* Motherboard</a><BR>
+		<a href="/indexpages/1003/">* 1003 Embedded</a><BR>
+		<a href="/indexpages/balanceboards/">* Balance Boards</a><BR>
 		</p>
 
 		<p><b>2014</b><BR>
