new work + shoutouts page

--- a/menu.html
+++ b/menu.html
@@ -48,6 +48,7 @@
 		<div class = title><a href="/"> <b>Thomas Newlands's</b></font><BR>
 		<b>portable museum</b></font><BR></a></div>
 		<p><b>2015</b><br>
+		<a href="/indexpages/alpifier/">* Wavering Alpifier</a><BR>
 		<a href="/indexpages/hugpoint/">* Hug Point, Oregon</a><BR>
 		<a href="/indexpages/sleepcards/">* Somniloquist Cards</a><BR>
 		<a href="/indexpages/jazzgenerator/">* Jazz Solocup Generators</a><BR>
@@ -63,9 +64,10 @@
 		<p><b>Misc</b><BR>
 
 
-		<a href="/indexpages/info/index.html">info</a><BR>
+		<a href="/indexpages/info/">info</a><BR>
 		<a href="http://thnewlands.tumblr.com/">tumblr</a><br />
 		<a href="http://twitter.com/comomomo">twitter</a><br />
+		<a href="/indexpages/shoutouts/">shoutouts</a><br />
 		
 		<p>---------</p>
 	</div>
