--- a/indexpages/callandresponse/index.html
+++ b/indexpages/callandresponse/index.html
@@ -16,7 +16,7 @@
 	<div id="content">
 	<p> <b>  Call and Response </b> </p>
 	
-	<p> A game made in Unity for two players. One sends waves for the other to ride on top of. Together players form odd synthesized compositions. Best experienced with a pair of controllers and a friend. </p>
+	<p> A game made in Unity for two players. One sends waves for the other to ride on top of. Together players form odd synthesized compositions. This work engages with histories of meditative digital play and attempts to make the experience social. Best experienced with a pair of controllers and a friend. </p>
 	
 	<p> rider controls: square boosts and triangle slows down, left and right bumpers control the frequency of your response, left joystick moves the rider. </p>
 	<p> drummer controls: square, triangle, circle and the x button all send different kinds of waves, the pitch of these waves can be altered using the left joystick. </p>
