--- a/indexpages/callandresponse/index.html
+++ b/indexpages/callandresponse/index.html
@@ -22,10 +22,10 @@
 	<p> drummer controls: square, triangle, circle and the x button all send different kinds of waves, the pitch of these waves can be altered using the left joystick. </p>
 
 	<p> prototype build </p>
-	<p><div class="video-container"> <iframe src="https://www.youtube.com/watch?v=eS3IqWKvdzQ" frameborder="0" allowfullscreen></iframe> </div> </p>	
+	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/eS3IqWKvdzQ?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>	
 	
 	<p> 12/18/2015 iteration </p>
-	<p><div class="video-container"> <iframe src="https://www.youtube.com/watch?v=od4rxPGM4C0" frameborder="0" allowfullscreen></iframe> </div> </p>
+	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/od4rxPGM4C0?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>
 	</div>
 </body>
 </html>
