--- a/indexpages/callandresponse/index.html
+++ b/indexpages/callandresponse/index.html
@@ -20,12 +20,14 @@
 	
 	<p> rider controls: square boosts and triangle slows down, left and right bumpers control the frequency of your response, left joystick moves the rider. </p>
 	<p> drummer controls: square, triangle, circle and the x button all send different kinds of waves, the pitch of these waves can be altered using the left joystick. </p>
-
-	<p> prototype build </p>
+	
+	<p> 12/18/2015 iteration </p>
+	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/od4rxPGM4C0?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>
+	
+	<br> 11/28/2015 prototype build </br>
 	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/eS3IqWKvdzQ?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>	
 	
-	<br> 12/18/2015 iteration </br>
-	<p><div class="video-container"> <iframe src="https://www.youtube.com/embed/od4rxPGM4C0?rel=0" frameborder="0" allowfullscreen></iframe> </div> </p>
+
 	</div>
 </body>
 </html>
