Added Somniloquies to page

--- a/menu.html
+++ b/menu.html
@@ -47,6 +47,8 @@
 
 		<div class = title><a href="/"> <b>Thomas Newlands's</b></font><BR>
 		<b>portable museum</b></font><BR></a></div>
+		<p><b>Ongoing</b><br>
+		<a href="/indexpages/somniloquies/">* Somniloquies</a><BR>
 		<p><b>2015</b><br>
 		<a href="/indexpages/callandresponse/">* Call and Response</a><BR>
 		<a href="/indexpages/concretedream/">* Concrete Dream Engine</a><BR>
