Uploaded entire archive as single file

--- a/indexpages/somniloquies/index.html
+++ b/indexpages/somniloquies/index.html
@@ -18,7 +18,9 @@
 	
 	<p> A growing archive of things I've said in my sleep, as recorded by Sleep as Android, since November 11, 2014 at 10:33:31. Clips available for use under Creative Commons with attribution license.</p>
  
-	<p> <a href="https://soundcloud.com/thnewlands/sets" target="newtab">Available on Soundcloud</a> </p>
+	<p> Available on <a href="https://soundcloud.com/thnewlands/sets" target="newtab">Soundcloud</a> </p>
+	<p> Also available as a zip file (last updated 1/17/2016) <a href="somniloquies-complete-01172016.zip" target="newtab"> somniloquies-complete-01172016.zip </p>
+	
 	
 	<iframe width="100%" height="450" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/186582467&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 	<iframe width="100%" height="450" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/186601709&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
