--- a/menu.html
+++ b/menu.html
@@ -48,21 +48,23 @@
 		<div class = title><a href="/"> <b>Thomas Newlands's</b></font><BR>
 		<b>portable museum</b></font><BR></a></div>
 		<p><b>Ongoing</b><br>
-		<a href="/indexpages/somniloquies/">* Somniloquies</a><BR>
+		<a href="/indexpages/somniloquies/">&#127769; Somniloquies</a><BR>
 		<p><b>2015</b><br>
-		<a href="/indexpages/callandresponse/">* Call and Response</a><BR>
-		<a href="/indexpages/concretedream/">* Concrete Dream Engine</a><BR>
-		<a href="/indexpages/alpifier/">* Wavering Alpifier</a><BR>
-		<a href="/indexpages/hugpoint/">* Hug Point, Oregon</a><BR>
-		<a href="/indexpages/sleepcards/">* Somniloquist Cards</a><BR>
-		<a href="/indexpages/jazzgenerator/">* Jazz Solocup Generators</a><BR>
-		<a href="/indexpages/inflate/">* Inflate.exe</a><BR>
-		<a href="/indexpages/motherboard/">* Motherboard</a><BR>
-		<a href="/indexpages/1003/">* 1003 Embedded</a><BR>
-		<a href="/indexpages/balanceboards/">* Balance Boards</a><BR>
+		<a href="/indexpages/callandresponse/">&#127760; Call and Response</a><BR>
+		<a href="/indexpages/concretedream/">&#127970; Concrete Dream Engine</a><BR>
+		<a href="/indexpages/alpifier/">&#128507; Wavering Alpifier</a><BR>
+		<a href="/indexpages/hugpoint/">&#127756; Hug Point, Oregon</a><BR>
+		<a href="/indexpages/sleepcards/">&#128164; Somniloquist Cards</a><BR>
+		<a href="/indexpages/jazzgenerator/">&#127927; Jazz Solocup Generators</a><BR>
+		<a href="/indexpages/inflate/">&#9981; Inflate.exe</a><BR>
+		<a href="/indexpages/motherboard/">&#128187; Motherboard</a><BR>
+		<a href="/indexpages/1003/">&#127751; 1003 Embedded</a><BR>
+		<a href="/indexpages/balanceboards/">&#128259; Balance Boards</a><BR>
 		</p>
 
 		<p><b>2014</b><BR>
+		<a href="/indexpages/doorisopen/"> &#127969; Door is Open</a><BR>
+		<a href="/indexpages/gearhartwalk/"> &#127749; Gearhart Walk</a><BR>
 
 
 		<p><b>Misc</b><BR>
