--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="mystyle.css">
 	<script src="jquery-2.1.4.min.js" type="text/javascript"></script>
 	<style>
+	.tmblr-iframe{
+		display:none;
+	}
 	</style>
 </head>
 <body>
