made it so the title doesn't change colors

--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
 	<div class="sidebar">
 		<p>---------</p>
 
-		<div class = title><a href="/"> <b>Thomas Newlands's</b></font><BR>
+		<div class = title><a style="color: #2b3d50;" href="/"> <b>Thomas Newlands's</b></font><BR>
 		<b>portable museum</b></font><BR></a></div>
 		<p><b>Ongoing</b><br>
 		<a href="/indexpages/somniloquies/">&#127769; Somniloquies</a><BR>
@@ -62,8 +62,8 @@
 		<a href="/indexpages/balanceboards/">&#128259; Balance Boards</a><BR>
 		</p>
 
-		<p><b>2014</b><BR>
 		<a href="/indexpages/doorisopen/"> &#127969; Door is Open</a><BR>
+		<p><b>2014</b><BR>
 		<a href="/indexpages/gearhartwalk/"> &#127749; Gearhart Walk</a><BR>
 
 
