--- a/indexpages/shoutouts/index.html
+++ b/indexpages/shoutouts/index.html
@@ -21,6 +21,7 @@
 	<p> <a href="https://www.behance.net/koysun" target="newtab">Koy Suntichotinun</a> </p>
 	<p> <a href="http://lpmcwack.tumblr.com/" target="newtab">Sacha Kuz Lusk</a> </p>
 	<p> <a href="http://gnomebodyknows.tumblr.com/" target="newtab">Luke VanOene</a> </p>
+	<p> <a href="http://parktrio.net/sam/" target="newtab">Sam Park</a> </p>
 	<br></br>
 	<p> <a href="http://pigsquad.com/" target="newtab">The Portland Indie Game Squad</a> </p>
 	</div>
