--- a/menu.html
+++ b/menu.html
@@ -72,8 +72,9 @@
 
 
 		<a href="/indexpages/info/">info</a><BR>
+		<a href="/indexpages/cv/">cv</a><BR>
 		<a href="http://thnewlands.tumblr.com/">tumblr</a><br />
-		<a href="http://twitter.com/comomomo">twitter</a><br />
+		<a href="http://twitter.com/thnewlands">twitter</a><br />
 		<a href="/indexpages/shoutouts/">shoutouts</a><br />
 		
 		<p>---------</p>
