--- a/indexpages/cv/index.html
+++ b/indexpages/cv/index.html
@@ -24,7 +24,7 @@
 		<br></br>
 		
 		<b> Education </b>
-		<p> 2014 – 2018 </p>
+		<p> 2014 -- 2018 </p>
 		<p> School of the Art Institute of Chicago (SAIC), Chicago, IL</p>
 		<p> Bachelors of Fine Arts with Emphasis in Art Education, focused on New Media Art </p>
 		<p> SAIC Merit Scholarship </p>
@@ -32,7 +32,7 @@
 		<br></br>
 		
 		<b> Teaching </b>
-		<p> 2014 –> Present </p>
+		<p> 2014 --> Present </p>
 		<p> Mentor with Pixel Arts (Game Education PDX). Portland, OR.</p>
 		<p> 2014 </p>
 		<p> Photography TA at Catlin Gabel Highschool. Portland, OR. </p>
