--- a/indexpages/reaching/index.html
+++ b/indexpages/reaching/index.html
@@ -16,17 +16,16 @@
 	<div id="content"> 
 	<p> <b> reaching 2016 -> </b> </p>
 	
-	<p> Reaching is a first-person, exploration-oriented videogame – what a disgruntled gamer might call a “walking simulator.” You, the player, control a recent college graduate living in a flat in a three-story townhouse. You’ll have unrivaled access to all the technological amenities of a twenty-something. You can watch TV, stare at computer monitors, or examine a fancy little tablet. There’s plenty to see, as long as you’re looking. </p>
-	
-	<p>Code and animations by <a href="http://peter-smyth.com/">Peter Smyth</a>, sound by <a href="https://twitter.com/gnomebodyknows">Luke Van'Oene</a>, 3d art by Thomas Newlands</p>
-	
+	<p> Reaching is a first-person, exploration-oriented videogame - what a disgruntled gamer might call a "walking simulator." You, the player, control a recent college graduate living in a flat in a three-story townhouse. You'll have unrivaled access to all the technological amenities of a twenty-something. You can watch TV, stare at computer monitors, or examine a fancy little tablet. There's plenty to see, as long as you're looking. </p>
+		
 	<br> <img src="reaching4.png" </br>
 	<br> <img src="reaching1.png" </br>
 	<br> <img src="reaching3.png" </br>
 	<br> <img src="reaching2.png" </br>
 	
+	<p>Code and animations by <a href="http://peter-smyth.com/">Peter Smyth</a>, sound by <a href="https://twitter.com/gnomebodyknows">Luke Van'Oene</a>, 3d art by Thomas Newlands</p>
 	
-	<p>This iteration expands on a 48 hour work from Global Game Jam which is playable online <a href="http://globalgamejam.org/2016/games/reaching">here.</a></p>
+	<p><i> This iteration expands on a 48 hour work from Global Game Jam which is playable online <a href="http://globalgamejam.org/2016/games/reaching">here.</a> </i></p>
 	
 	</div>
 </body>
