--- a/indexpages/reaching/index.html
+++ b/indexpages/reaching/index.html
@@ -14,7 +14,7 @@
 	</div>
 	
 	<div id="content"> 
-	<p> <b> reaching 2016 -> </b> </p>
+	<p> <b> reaching - 2016 -> </b> </p>
 	
 	<p> Reaching is a first-person, exploration-oriented videogame - what a disgruntled gamer might call a "walking simulator." You, the player, control a recent college graduate living in a flat in a three-story townhouse. You'll have unrivaled access to all the technological amenities of a twenty-something. You can watch TV, stare at computer monitors, or examine a fancy little tablet. There's plenty to see, as long as you're looking. </p>
 		
