--- a/indexpages/reaching/index.html
+++ b/indexpages/reaching/index.html
@@ -23,7 +23,7 @@
 	<br> <img src="reaching3.png" </br>
 	<br> <img src="reaching2.png" </br>
 	
-	<p>Code and animations by <a href="http://peter-smyth.com/">Peter Smyth</a>, sound by <a href="https://twitter.com/gnomebodyknows">Luke Van'Oene</a>, 3d art by Thomas Newlands</p>
+	<p>Code and animations by <a href="http://peter-smyth.com/">Peter Smyth</a>, sound by <a href="https://twitter.com/gnomebodyknows">Luke VanOene</a>, 3d art by Thomas Newlands</p>
 	
 	<p><i> This iteration expands on a 48 hour work from Global Game Jam which is playable online <a href="http://globalgamejam.org/2016/games/reaching">here.</a> </i></p>
 	
