--- a/indexpages/cv/index.html
+++ b/indexpages/cv/index.html
@@ -40,6 +40,7 @@
 		
 		<b> Shows </b>
 		<p> 2016 </p>
+		<p><i>Waveforms</i>, Tom Robinson Gallery, Chicago IL </p>
 		<p> <i>Poly Play Arcade</i>, SAIC Sharp Building, Chicago, IL </p>
 		<p> 2015 </p>
 		<p> <i>At the Headwaters, Marshall J. Gardner Center for the Arts</i>, Gary, IN </p>
