--- a/indexpages/flexhand/index.html
+++ b/indexpages/flexhand/index.html
@@ -24,7 +24,7 @@
 	
 	<p><div class="video-container"> <iframe src="https://player.vimeo.com/video/114698218" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div> </p>	
 
-	<p> Documentation via <a href="http://koy-sun.rocks/works/document/flexhand/flexhand.html">Koy’s website</a> where you can find more images from the project.</p>
+	<p> Documentation via <a href="http://koy-sun.rocks/works/document/flexhand/flexhand.html">Koy's website</a> where you can find more images from the project.</p>
 	
 	</div>
 </body>
