--- a/menu.html
+++ b/menu.html
@@ -67,6 +67,7 @@
 		
 		<p><b>2014</b><BR>
 		<a href="/indexpages/doorisopen/"> &#127969; Door is Open</a><BR>
+		<a href="/indexpages/flexhand/"> &#9995; Flex Hand</a><BR>
 		<a href="/indexpages/gearhartwalk/"> &#127749; Gearhart Walk</a><BR>
 
 
