--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	<style>
 		.tmblr-iframe{  display:none; }
 	</style>
+	
+	<script>
+		(function(h,e,a,t,m,p) {
+		m=e.createElement(a);m.async=!0;m.src=t;
+		p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
+		})(window,document,'script','https://u.heatmap.it/log.js');
+		//heatmap analytics
+	</script>
+	
 </head>
 <body>
 	<div id="sidebar">
