--- a/menu.html
+++ b/menu.html
@@ -78,6 +78,7 @@
 		<a href="/indexpages/cv/">cv</a><BR>
 		<a href="http://thnewlands.tumblr.com/">tumblr</a><br />
 		<a href="http://twitter.com/thnewlands">twitter</a><br />
+		<a href="https://thnewlands.itch.io/">itch.io</a><br />
 		<a href="/indexpages/shoutouts/">shoutouts</a><br />
 		
 		<p>---------</p>
