--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<style>
 		.tmblr-iframe{  display:none; }
 	</style>
-	
+	<pre class="prettyprint"><script type="text/javascript" src="http://thnewlands.tumblr.com/api/read/json"></script>
+</pre>
 </head>
 <body>
 	<div id="sidebar">
@@ -19,7 +20,14 @@
 	</div>
 	
 	<div id="content"> 
-	<script src="http://thnewlands.tumblr.com/js" type="text/javascript"></script>
+		<script type="text/javascript">
+		    // The variable "tumblr_api_read" is now set to your tumblr feed.
+
+		    document.write(
+			'<a href="' + tumblr_api_read['posts'][0]['url'] + 
+			'">My most recent Tumblr post</a>'
+		    );
+		</script>	
 	</div>
 
 </body>
