--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<style>
 		.tmblr-iframe{  display:none; }
 	</style>
-	<pre class="prettyprint"><script type="text/javascript" src="http://thnewlands.tumblr.com/api/read/json"></script>
-</pre>
 </head>
 <body>
+	<script type="text/javascript" src="http://thnewlands.tumblr.com/api/read/json"></script>
+	
 	<div id="sidebar">
 	<script>
 		$( "#sidebar" ).load( "menu.html" );
@@ -34,8 +34,7 @@
 	    }
 	</script>
 	
-	<div id="content"> 
-	</div>
+	<div id="content"> </div>
 
 </body>
 </html>
