--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
 	<style>
 		.tmblr-iframe{  display:none; }
 	</style>
+	<pre class="prettyprint"><script type="text/javascript" src="http://thnewlands.tumblr.com/api/read/json"></script>
+</pre>
 </head>
 <body>
-	<script type="text/javascript" src="http://thnewlands.tumblr.com/api/read/json"></script>
-	
 	<div id="sidebar">
 	<script>
 		$( "#sidebar" ).load( "menu.html" );
 	</script>
 	</div>
 	
-	<script type=text/javascript>
-	    const recent_posts_count = 5;
-	    var tumblr_api_read = tumblr_api_read || null;
-	    if (tumblr_api_read != null) {
-		    var recentPostsHtml = "<ul>";
-		    for (var i = 0; i < recent_posts_count; i++) {
-			    var url = tumblr_api_read.posts[i].url;
-			    var title = tumblr_api_read.posts[i]["regular-title"];
-			    recentPostsHtml += "<li><a href=" + url + ">" + title + "</a></li>";
+	<div id="content"> 
+		<script type=text/javascript>
+		    const recent_posts_count = 5;
+		    var tumblr_api_read = tumblr_api_read || null;
+		    if (tumblr_api_read != null) {
+			    var recentPostsHtml = "<ul>";
+			    for (var i = 0; i < recent_posts_count; i++) {
+				    var url = tumblr_api_read.posts[i].url;
+				    var title = tumblr_api_read.posts[i]["regular-title"];
+				    recentPostsHtml += "<li><a href=" + url + ">" + title + "</a></li>";
+			    }
+			    recentPostsHtml += "</ul>";
+			    document.write(recentPostsHtml);
 		    }
-		    recentPostsHtml += "</ul>";
-		    $("#content").append(recentPostsHtml);
-	    }
-	</script>
-	
-	<div id="content"> </div>
+		</script>
+	</div>
 
 </body>
 </html>
