--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 		.tmblr-iframe{  display:none; }
 	</style>
 	
+	<!-- <head> if jquery isn't on the page already -->
+	<script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+
+	<!-- <head>, another file, wherever -->
+	<script type="text/javascript">
+	function tumblr(resp) {
+		var posts = resp.posts;
+		$('#blog .loading').replaceWith('<ul/>');
+		$ul = $('#blog ul');
+		for (var i=0; i<posts.length; i++) {
+			var p = posts[i];
+			var title = p['regular-title'] || p['link-text'] || null;
+			if (title)
+				$ul.append('<li><a href="'+p['url']+'">'+title+'</a></li>');
+		}
+	}
+	</script>
+	
 </head>
 <body>
 	<div id="sidebar">
@@ -19,9 +37,19 @@
 	</script>
 	</div>
 	
-	<div id="content"> 
-	<script src="http://thnewlands.tumblr.com/js" type="text/javascript"></script>
+//	<div id="content"> 
+//	<script src="http://thnewlands.tumblr.com/js" type="text/javascript"></script>
+//	</div>
+	
+	<!-- Where you want your tumblog -->
+	<div id="blog">
+		<h2>My Blog</h2>
+		<span class="loading">Loading...</span>
 	</div>
-
 </body>
 </html>
+
+
+
+<!-- Bottom of the page, probably.  Change host -->
+<script src="http://thnewlands/api/read/json?callback=tumblr&amp;num=10" type="text/javascript"></script>
