--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	</div>
 	
 	<div id="content"> 
+		<script type=’text/javascript’ src=’http://thnewlands.tumblr.com/js’></script>
 	</div>
 	
 </body>
