--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</div>
 	
 	<div id="content"> 
-		<script type=’text/javascript’ src=’http://thnewlands.tumblr.com/js’></script>
+		<script src="http://thnewlands.tumblr.com/js" type="text/javascript"></script>
 	</div>
 	
 </body>
