--- a/tumblr.html
+++ b/tumblr.html
@@ -3,24 +3,37 @@
     <script	src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 
     <script type="text/javascript">
-    function tumblr(resp) {
-      var posts = resp.posts;
-      $('#blog .loading').replaceWith('<ul/>');
-      $ul = $('#blog ul');
-      for (var i=0; i<posts.length; i++) {
-        var p = posts[i];
-                    var title = p['regular-title'] || p['link-text'] || null;
-        if (title)
-          $ul.append('<li><a href="'+p['url']+'">'+title+'</a></li>');
+    $.ajax({
+        url: "http://api.tumblr.com/v2/blog/thnewlands.tumblr.com/posts?api_key=71wcLjAWmhjAK17EdQBI6OCo2yM55WXRdCLGNGjwT6ltjXlnWA",
+        dataType: 'jsonp',
+        success: function(posts){
+          var postings = posts.response.posts;
+          console.log(postings);
+          var text = '';
+
+    for (var i in postings) {
+           var p = postings[i];
+          text += '<p></p>';
+      if(p.type == 'photo'){
+        text +='<img src=' +  p.photos[0].original_size.url + '>' + p.caption
       }
-    }
+        if(p.type == 'video'){
+        text += p.player[0].embed_code +'<p></p>' + p.caption;
+      }
+          if(p.type == 'text'){
+        text += p.body + p.caption;
+      }
+    text += '<a href='+ p.post_url +'>'+ p.post_url +'</a></li>';
+          text += '<br></br>';
+          }
+          $('ul').append(text);
+        }
+    });
     </script>
   </head>
  
-<script src="http://www.thnewlands.tumblr.com/api/read/json?callback=tumblr&amp;num=10" type="text/javascript"></script>
-
 <body>
-  <div id="blog">
+  <div id="ul">
     <h2>My Blog</h2>
     <span class="loading">Loading...</span>
   </div>
