--- a/tumblr.html
+++ b/tumblr.html
@@ -26,16 +26,14 @@
     text += '<a href='+ p.post_url +'>'+ p.post_url +'</a></li>';
           text += '<br></br>';
           }
-          $('ul').append(text);
+          $('blog').append(text);
         }
     });
     </script>
   </head>
  
 <body>
-  <div id="ul">
-    <h2>My Blog</h2>
-    <span class="loading">Loading...</span>
+  <div id="blog">
   </div>
 </body>
 
