--- a/tumblr.html
+++ b/tumblr.html
@@ -26,14 +26,14 @@
     text += '<a href='+ p.post_url +'>'+ p.post_url +'</a></li>';
           text += '<br></br>';
           }
-          $('blog').append(text);
+          $('content').append(text);
         }
     });
     </script>
   </head>
  
 <body>
-  <div id="blog">
+  <div id="content">
   </div>
 </body>
 
